Extract live-resize related code in `MetalRedrawer.kt` into `MetalLiveResize`